--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             background-color: var(--background-color);
             color: var(--text-color);
             transition: all 0.3s ease-in-out;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
 
         header {
@@ -65,9 +68,14 @@
             color: var(--nav-hover-text);
         }
 
+        main {
+            flex: 1;
+            padding: 2rem 1rem;
+        }
+
         section {
             padding: 2rem;
-            margin: 1rem;
+            margin: 1rem 0;
             background-color: var(--section-background);
             border-radius: 8px;
             box-shadow: 0 0 10px var(--box-shadow);
@@ -78,9 +86,6 @@
             color: var(--header-footer-text);
             text-align: center;
             padding: 1rem;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
         }
 
         .container {
@@ -109,51 +114,30 @@
 
 <header>
     <h1>Raffy Jalal</h1>
-    <p>Honors Computer Science Major Minoring in Data Science</p>
+    <p>Pre-Junior @ Drexel University</p>
     <button class="theme-toggle" onclick="toggleTheme()">Toggle Dark/Light Mode</button>
 </header>
 
 <nav>
     <a href="#about">About Me</a>
-    <a href="#projects">Projects</a>
-    <a href="#experiences">Experiences</a>
     <a href="#personal-info">Personal Information</a>
     <a href="#contact">Contact</a>
 </nav>
 
-<div class="container">
+<main class="container">
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I'm Raffy Jalal, an Honors Computer Science major with a minor in Data Science. I am passionate about technology, programming, and data analysis. I am currently seeking co-op positions to gain practical experience in the tech industry. Welcome to my personal webpage where you can learn more about my projects, experiences, and how to get in touch with me.</p>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <p>Here are some of my projects:</p>
-        <ul>
-            <li><strong>Project 1:</strong> Description of project 1.</li>
-            <li><strong>Project 2:</strong> Description of project 2.</li>
-            <li><strong>Project 3:</strong> Description of project 3.</li>
-        </ul>
-    </section>
-
-    <section id="experiences">
-        <h2>Experiences</h2>
-        <p>Here are some of my experiences:</p>
-        <ul>
-            <li><strong>Experience 1:</strong> Description of experience 1.</li>
-            <li><strong>Experience 2:</strong> Description of experience 2.</li>
-            <li><strong>Experience 3:</strong> Description of experience 3.</li>
-        </ul>
+        <p>I am a Honors Computer Science student minoring in Data Science. Currently, I am looking for a summer internship and am willing to work from June 12 - September 22. </p>
     </section>
 
     <section id="personal-info">
         <h2>Personal Information</h2>
-        <p>Here is some personal information about me:</p>
-        <ul>
-            <li><strong>Email:</strong> raffy.jalal@example.com</li>
-            <li><strong>Phone:</strong> (123) 456-7890</li>
-            <li><strong>Location:</strong> City, State</li>
+        <p>Check out my Mini Bike!</p>
+        <img src="images/minibike.jpg" alt="Mini bike" style="max-width: 100%; height: auto;">
+	<ul>
+            <li><strong>Email:</strong> rmj77@drexel.edu</li>
+            <li><strong>Phone:</strong> (267)-467-3865</li>
+            <li><strong>Location:</strong> Lansdale, PA</li>
         </ul>
     </section>
 
@@ -161,18 +145,21 @@
         <h2>Contact</h2>
         <p>You can contact me through the following methods:</p>
         <ul>
-            <li><strong>Email:</strong> raffy.jalal@example.com</li>
+            <li><strong>Email:</strong> rmj77@drexel.edu</li>
+<li><strong>Phone:</strong> (267)-467-3865</li>
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/raffyjalal">linkedin.com/in/raffyjalal</a></li>
-            <li><strong>GitHub:</strong> <a href="https://github.com/raffyjalal">github.com/raffyjalal</a></li>
+            
         </ul>
     </section>
-</div>
+</main>
 
 <footer>
     <p>&copy; 2024 Raffy Jalal</p>
 </footer>
 
 <script>
+    document.documentElement.setAttribute('data-theme', 'dark');
+
     function toggleTheme() {
         if (document.documentElement.getAttribute('data-theme') === 'dark') {
             document.documentElement.setAttribute('data-theme', 'light');
