--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <section id="personal-info">
         <h2>Personal Information</h2>
         <p>Check out my Mini Bike!</p>
-        <img src="images/minibike.jpg" alt="Mini bike" style="max-width: 100%; height: auto;">
+        <img src="minibike.jpeg" alt="Mini bike" style="max-width: 100%; height: auto;">
 	<ul>
             <li><strong>Email:</strong> rmj77@drexel.edu</li>
             <li><strong>Phone:</strong> (267)-467-3865</li>
