--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <section id="personal-info">
         <h2>Personal Information</h2>
         <p>Check out my Mini Bike!</p>
-        <img src="minibike.jpeg" alt="Mini bike" style="max-width: 100%; height: auto;">
+        <img src="minibike.jpeg" alt="Mini bike" style="max-width: 50%; height: 50%;">
     </section>
 
     <section id="contact">
