--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
         <h2>Personal Information</h2>
         <p>Check out my Mini Bike!</p>
         <img src="minibike.jpeg" alt="Mini bike" style="max-width: 50%; height: 50%;">
+         <p>Last summer I was extremely bored so I decided to build this from scratch. It was a little project 
+             of mine that took a couple of days to finish. </p>
+        <p>Equipped with a Harbor Freight Predator 224cc Engine. It goes darn fast, at least 50 mph.</p>
     </section>
 
     <section id="contact">
