--- a/index.html
+++ b/index.html
@@ -144,10 +144,20 @@
         <p>You can contact me through the following methods:</p>
         <ul>
             <li><strong>Email:</strong> rmj77@drexel.edu</li>
-<li><strong>Phone:</strong> (267)-467-3865</li>
+            <li><strong>Phone:</strong> (267)-467-3865</li>
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/raffyjalal">linkedin.com/in/raffyjalal</a></li>
-            
         </ul>
+    </section>
+
+    <section id="spotify">
+        <h2>My Spotify Playlist's</h2>
+        <p>This is a compilation of every song I like.</p>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/33QXqJRRbTLJCBLY1f2BlH?utm_source=generator" width="80%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <p>This is a more selective playlist that features most of my favorite songs. Every time I try to filter them I get very picky.</p>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1DE9PomIrmcIUuvuQlYh9C?utm_source=generator" width="80%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <p>Juice WRLD is my favorite artist. It's a controversial opinion because people think I am heartbroken but then I have to back myself up with his other music that isn't mainstream.</p>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5HUFZrgPfpf3c0KMyMsadi?utm_source=generator" width="80%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        
     </section>
 </main>
 
