--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <h2>My Builds</h2>
             <div class="build">
                 <h3>MotoVox MBX10 (Custom)</h3>
-                <img src="images/motovox.jpeg" alt="MotoVox MBX10" style="max-width: 50%; height: auto;">
+                <img src="images/motovox.jpeg"  style="max-width: 49%; height: auto;">
+                <img src="images/motovox2.jpeg" style="max-width: 49%; height: auto;">
                 <p>Last summer I was extremely bored so I decided to build this from scratch. It was a little project of mine that took a couple of days to finish.</p>
                 <p>Parts added:</p>
                 <ul>
@@ -43,11 +44,13 @@
                     <li>Seat</li>
                     <li>Kill Switch</li>
                 </ul>
-            </div>
-            <div class="build">
-                <h3>Customized Coleman CT200u (Custom)</h3>
-                <img src="images/coleman.JPG" alt="Coleman CT200u" style="max-width: 50%; height: auto;">
-                <p>After I built the motovox, my friend wanted to build another bike with him.</p>
+                <p>This was such a fun first build. It took a while to create it as I was buying and returning parts.
+                With trial and error I finally figured it out. I ended up selling it and made extraordinary profit.</p>
+
+                <h3>Coleman CT200u (Custom)</h3>
+                <img src="images/coleman.JPG" style="max-width: 50%; height: auto;">
+                <p>After I built the Motovox, my friend wanted to build another bike with him.</p>
+                <p>Parts added:</p>
                 <ul>
                     <li>Coleman Bike Frame</li>
                     <li>Predator 212cc</li>
@@ -63,6 +66,26 @@
                     <li>Metal Fender</li>
                     <li>Headlight</li>
                 </ul>
+                <p>This was pretty straight forward. I am trying to convince my friend at get it DMV approved by adding a title to it. All he would have to is add turn signal lights and get PENNDOT approved tires.</p>
+
+                <h3>Tao Tao Quad (Custom)</h3>
+                <img src="images/firstquad2.jpg" style="max-width: 49%; height: auto;">
+                <img src="images/firstquad.jpg" style="max-width: 49%; height: auto;">
+                <p>Those two bikes were completed in less than two weeks. 
+                It was a fun hobby so I was always scouting Facebook Marketplace and came upon this quad. 
+                I was willing to tackle on something a little different and having a quad would be sick.</p>
+                <p>Parts added:</p>
+                <ul>
+                    <li>Tao Tao Bike Frame</li>
+                    <li>Predator 212cc</li>
+                    <li>Torque Converter</li>
+                    <li>Exhaust</li>
+                    <li>Carburetor</li>
+                    <li>Drum Brakes</li>
+                    <li>Hydraulic Brakes</li>
+                </ul>
+                <p>The hardest part was adding the torque converter because I tried to straight chain it with a ordinary centrifugal clutch.
+                ATV's won't allow that due to the four tires need more torque.</p>
             </div>
         </section>
 
