Revamped web page organizations

--- a/spotify.html
+++ b/spotify.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Webpage</title>
+    <title>Spotify Playlists - Raffy Jalal</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,23 +17,19 @@
         <a href="index.html">Home</a>
         <a href="my-builds.html">My Builds</a>
         <a href="spotify.html">Spotify</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html#contact">Contact</a>
     </nav>
 
     <main class="container">
-        <section id="welcome">
-            <h2>Welcome to my personal webpage!</h2>
-            <p>Feel free to explore and get to know me better and reach out if you have any questions</p>
-        </section>
-
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>You can contact me through the following:</p>
-            <ul>
-                <li><strong>Email:</strong> <a href="mailto:rmj77@drexel.edu">Click to Send me an Email</a></li>
-                <li><strong>Phone:</strong> <a href="tel:267-467-3865">267-467-3865</a></li>
-                <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/raffyjalal">Raffy Jalal's LinkedIn</a></li>
-            </ul>
+        <section id="spotify">
+            <h2>My Spotify Playlists</h2>
+            <div class="spotify-container">
+                <p>A compilation of every song that feels good to my ears.</p>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/33QXqJRRbTLJCBLY1f2BlH?utm_source=generator" width="80%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                
+                <p>This is a more selective playlist that features most of my favorite songs because I get very picky.</p>
+                <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1DE9PomIrmcIUuvuQlYh9C?utm_source=generator" width="80%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+            </div>
         </section>
     </main>
 
