Fixed spotify details and About me details

--- a/index.html
+++ b/index.html
@@ -23,7 +23,16 @@
   <section class="about container">
     <h2>About Me</h2>
     <p>
-      I'm a Computer Science student at Drexel University graduating in 2027 with a focus on AI, full-stack development, and hardware integration. I love building things that solve real problems—from machine learning applications to hands-on mechanical builds. Outside of tech, I’m passionate about playing basketball, hanging out with friends, and doing mukbangs—I once ate 100 Popeyes nuggets in under an hour. I love spicy food (I’m Bengali, of course) and think Indian cuisine is hands down the best—my favorites are butter chicken or traditional roast. I live in Lansdale, PA and I’m always open to connecting. You can reach me at 267-467-3865 or email me at rmj77@drexel.edu.
+      I'm a Computer Science student at Drexel University graduating in 2027 with a focus on AI, full-stack development, and hardware integration. 
+      I love building things that solve real problems—from machine learning applications to hands-on mechanical builds. 
+      I was born in Brooklyn, NY, but really I grew up outside of Philadelphia in Lansdale, PA. 
+      My passion for technology started early because I've always been a tech guy. 
+      Outside of tech, I love traveling, volunteering, and hanging out with friends and family. 
+      Hanging out is really just me and my friends playing sports, eating out, or having poker nights. 
+      Some of my favorite foods are chicken roast with Bengali-style pulao., Wingstop chicken tenders, lamb shawarma, and cheesesteaks.
+      I also love to scroll on Tiktok. Not saying I'm brainrotted, I just love watching informational and historical videos. 
+      My dream is to go to Japan and experience the culture, technology, and food firsthand. I also want to explore all of Europe, especially the UK, France, Greece and Italy.
+      I’m always open to connecting. You can reach me at 267-467-3865 or email me at rmj77@drexel.edu.
     </p>
   </section>
 
@@ -92,20 +101,14 @@
 
 <section class="spotify container">
   <h2>Spotify</h2>
-  <p>Music fuels my creativity, whether I’m coding, building, or just chilling. Some songs may not display because they’re local files—open the preview in Spotify to see everything. Below are playlists featuring my favorite songs of all time, my favorite artist Travis Scott, Juice WRLD with lots of unreleased tracks, and Lil Uzi Vert who still has hidden gems despite being past his prime.</p>
+  <p>I love my music so here are some of my playlists. Some songs may not display because they’re local files—open the preview in Spotify to see everything. </p>
 
-  <h3>All-Time Favorite Songs</h3>
   <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6KSOVamsZ9rtDLwk50SBPE?utm_source=generator&theme=0" width="100%" height="400" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-  <h3>Favorite Travis Scott Songs</h3>
   <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3vJw7Eu5u5UzXNJypoUtOQ?utm_source=generator" width="100%" height="400" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-  <h3>Favorite Juice WRLD Songs</h3>
-  <p>Includes a lot of local files—Juice WRLD has thousands of unreleased tracks that are incredible. RIP Juice WRLD.</p>
   <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/08QPJLqIiTNjrEvz7pJ0J8?utm_source=generator" width="100%" height="400" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-  <h3>Favorite Lil Uzi Vert Songs</h3>
-  <p>Uzi is kind of washed now, but in 2025 alone over 500 of his songs leaked—this playlist is updated with the best ones.</p>
   <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0qqQf3MJmC0yUm1cWnA4cL?utm_source=generator" width="100%" height="400" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </section>
 
